--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://github.com/gustavoguanabara" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/c/CursoemVídeo" target="_blank">CursoemVideo</a>.</p>
+        <p>Site criado por <a href="https://lucas2678-bit.github.io" target="_blank">lucas henrique para o CursoemVideo</a>.</p>
     </footer>
 </body>
 </html>
