--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://lucas2678-bit.github.io" target="_blank">lucas henrique </a>.</p>
+        <p>Site criado por <a href="https://github.com/lucas2678-bit" target="_blank">lucas henrique </a></p>
     </footer>
 </body>
 </html>
