--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
             <p>A principal inspiração para os traços do novo <strong>Bugdroid</strong> veio daqueles bonequinhos que ilustram portas de banheiro para indicar o gênero de cada porta. Conta a lenda que a artista estava criando em sua mesa no escritório do <strong>Google</strong> e olhou para o lado dos banheiros e a identificação foi imediata: simples, limpo, objetivo.</p>
 
-            <div class="video"><iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M?si=gfJU-WuXFImBjYUO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+            <div class="video"><iframe width="560" height="315" src="https://www.youtube.com/embed/l2UDgpLz20M?si=PDSqerV6K7ak-X0P" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
             
             <aside>
                 <h3>Quer aprender mais?</h3>
@@ -86,7 +86,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://github.com/lucas2678-bit" target="_blank">lucas henrique </a></p>
+        <p>Site criado por <a href="https://github.com/lucas2678-bit" target="_blank">lucas henrique</a></p>
     </footer>
 </body>
 </html>
